CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

ADD_DEFINITIONS(-D__linux__)

set(CMAKE_USER_MAKE_RULES_OVERRIDE
   ${CMAKE_CURRENT_SOURCE_DIR}/c_flag_overrides.cmake)
set(CMAKE_USER_MAKE_RULES_OVERRIDE_CXX
   ${CMAKE_CURRENT_SOURCE_DIR}/cxx_flag_overrides.cmake)

PROJECT (engine)

SET(TF_CURRENT_BINARY_PATH         ${PROJECT_BINARY_DIR}/../../bin)
SET(TF_CURRENT_BINARY_PATH_BIN     ${TF_CURRENT_BINARY_PATH}/debug)
SET(TF_CURRENT_BINARY_PATH_DLL     ${TF_CURRENT_BINARY_PATH_BIN})
SET(TF_CURRENT_BINARY_PATH_LIB     ${TF_CURRENT_BINARY_PATH}/lib)

# SET(CMAKE_BUILD_TYPE Release)
MESSAGE(STATUS "CMAKE_BUILD_TYPE is " ${CMAKE_BUILD_TYPE})

INCLUDE_DIRECTORIES(./)
ADD_SUBDIRECTORY(third_party)

#INCLUDE_DIRECTORIES(base)
ADD_SUBDIRECTORY(base)
ADD_SUBDIRECTORY(base2)
ADD_SUBDIRECTORY(db)
ADD_SUBDIRECTORY(message_pdu)
ADD_SUBDIRECTORY(net)



