ADD_SUBDIRECTORY(third_party/dynamic_annotations)

ADD_DEFINITIONS(-D_FILE_OFFSET_BITS=64)
ADD_DEFINITIONS(-D_LARGE_FILES)
 
SET(SRC_LIST
		../build/build_config.h
		async_socket_io_handler.h
		async_socket_io_handler_posix.cc
		at_exit.cc
		at_exit.h
		atomic_ref_count.h
		atomic_sequence_num.h
		atomicops.h
		atomicops_internals_gcc.h
		atomicops_internals_x86_gcc.cc
		atomicops_internals_x86_gcc.h
		auto_reset.h
		barrier_closure.cc
		barrier_closure.h
		base64.cc
		base64.h
		base_export.h
		base_paths.cc
		base_paths.h
		base_paths_posix.cc
		base_paths_posix.h
		base_switches.cc
		base_switches.h
		basictypes.h
		big_endian.cc
		big_endian.h
		bind.h
		bind_helpers.cc
		bind_helpers.h
		bind_internal.h
		bits.h
		build_time.cc
		build_time.h
		callback.h
		callback_forward.h
		callback_helpers.cc
		callback_helpers.h
		callback_internal.cc
		callback_internal.h
		callback_list.h
		cancelable_callback.h
		check_example.cc
		command_line.cc
		command_line.h
		compiler_specific.h
		cpu.cc
		cpu.h
		critical_closure.h
		deferred_sequenced_task_runner.cc
		deferred_sequenced_task_runner.h
		environment.cc
		environment.h
		event_recorder.h
		event_recorder_stubs.cc
		event_types.h
		file_descriptor_posix.h
		file_util.h
		file_version_info.h
		float_util.h
		format_macros.h
		guid.cc
		guid.h
		guid_posix.cc
		hash.cc
		hash.h
		id_map.h
		lazy_instance.cc
		lazy_instance.h
		linux_util.cc
		linux_util.h
		location.cc
		location.h
		logging.cc
		logging.h
		macros.h
		md5.cc
		md5.h
		move.h
		observer_list.h
		observer_list_threadsafe.h
		path_service.cc
		path_service.h
		pending_task.cc
		pending_task.h
		pickle.cc
		pickle.h
		port.h
		rand_util.cc
		rand_util.h
		rand_util_posix.cc
		run_loop.cc
		run_loop.h
		safe_strerror_posix.cc
		safe_strerror_posix.h
		scoped_clear_errno.h
		scoped_generic.h
		scoped_native_library.cc
		scoped_native_library.h
		scoped_observer.h
		sequence_checker.h
		sequence_checker_impl.cc
		sequence_checker_impl.h
		sequenced_task_runner.cc
		sequenced_task_runner.h
		sequenced_task_runner_helpers.h
		sha1.h
		sha1_portable.cc
		single_thread_task_runner.h
		stl_util.h
		supports_user_data.cc
		supports_user_data.h
		sync_socket.h
		sync_socket_posix.cc
		sys_byteorder.h
		sys_info.cc
		sys_info.h
		sys_info_internal.h
		sys_info_linux.cc
		sys_info_posix.cc
		task_runner.cc
		task_runner.h
		task_runner_util.h
		template_util.h
		thread_task_runner_handle.cc
		thread_task_runner_handle.h
		tracked_objects.cc
		tracked_objects.h
		tracking_info.cc
		tracking_info.h
		tuple.h
		value_conversions.cc
		value_conversions.h
		values.cc
		values.h
		version.cc
		version.h
		vlog.cc
		vlog.h
		  
		allocator/allocator_extension.cc
		allocator/allocator_extension.h
		allocator/type_profiler_control.cc
		allocator/type_profiler_control.h
		  
		third_party/dmg_fp/dmg_fp.h
		third_party/dmg_fp/g_fmt.cc
		third_party/dmg_fp/dtoa_wrapper.cc
		third_party/icu/icu_utf.cc
		third_party/icu/icu_utf.h
		third_party/nspr/prtime.cc
		third_party/nspr/prtime.h
		
		containers/hash_tables.h
		containers/linked_list.h
		containers/mru_cache.h
		containers/scoped_ptr_hash_map.h
		containers/small_map.h
		containers/stack_container.h
	
		debug/alias.cc
		debug/alias.h
		debug/asan_invalid_access.cc
		debug/asan_invalid_access.h
		debug/crash_logging.cc
		debug/crash_logging.h
		debug/debugger.cc
		debug/debugger.h
		debug/debugger_posix.cc
		debug/dump_without_crashing.cc
		debug/dump_without_crashing.h
		debug/leak_annotations.h
		debug/leak_tracker.h
		debug/proc_maps_linux.cc
		debug/proc_maps_linux.h
		debug/profiler.cc
		debug/profiler.h
		debug/stack_trace.cc
		debug/stack_trace.h
		debug/stack_trace_posix.cc
		debug/task_annotator.cc
		debug/task_annotator.h
		debug/trace_event.h
		debug/trace_event_argument.cc
		debug/trace_event_argument.h
		debug/trace_event_impl.cc
		debug/trace_event_impl.h
		debug/trace_event_impl_constants.cc
		debug/trace_event_memory.cc
		debug/trace_event_memory.h
		debug/trace_event_synthetic_delay.cc
		debug/trace_event_synthetic_delay.h
		debug/trace_event_system_stats_monitor.cc
		debug/trace_event_system_stats_monitor.h

		files/dir_reader_fallback.h
		files/dir_reader_linux.h
		files/dir_reader_posix.h
		files/file.cc
		files/file.h
		files/file_enumerator.cc
		files/file_enumerator.h
		files/file_enumerator_posix.cc
		files/file_path.cc
		files/file_path.h
		files/file_path_constants.cc
		files/file_path_watcher.cc
		files/file_path_watcher.h
		files/file_path_watcher_linux.cc
		files/file_posix.cc
		files/file_proxy.cc
		files/file_proxy.h
		files/file_util.cc
		files/file_util.h
		files/file_util_linux.cc
		files/file_util_posix.cc
		files/file_util_proxy.cc
		files/file_util_proxy.h
		files/important_file_writer.cc
		files/important_file_writer.h
		files/memory_mapped_file.cc
		files/memory_mapped_file.h
		files/memory_mapped_file_posix.cc
		files/scoped_file.cc
		files/scoped_file.h
		files/scoped_temp_dir.cc
		files/scoped_temp_dir.h
		
		json/json_file_value_serializer.cc
		json/json_file_value_serializer.h
		json/json_parser.cc
		json/json_parser.h
		json/json_reader.cc
		json/json_reader.h
		json/json_string_value_serializer.cc
		json/json_string_value_serializer.h
		json/json_value_converter.h
		json/json_writer.cc
		json/json_writer.h
		json/string_escape.cc
		json/string_escape.h
		
		memory/aligned_memory.cc
		memory/aligned_memory.h
		memory/discardable_memory.cc
		memory/discardable_memory.h
		memory/discardable_memory_emulated.cc
		memory/discardable_memory_emulated.h
		memory/discardable_memory_linux.cc
		memory/discardable_memory_malloc.cc
		memory/discardable_memory_malloc.h
		memory/discardable_memory_manager.cc
		memory/discardable_memory_manager.h
		memory/linked_ptr.h
		memory/manual_constructor.h
		memory/memory_pressure_level_list.h
		memory/memory_pressure_listener.cc
		memory/memory_pressure_listener.h
		memory/raw_scoped_refptr_mismatch_checker.h
		memory/ref_counted.cc
		memory/ref_counted.h
		memory/ref_counted_delete_on_message_loop.h
		memory/ref_counted_memory.cc
		memory/ref_counted_memory.h
		memory/scoped_open_process.h
		memory/scoped_policy.h
		memory/scoped_ptr.h
		memory/scoped_vector.h
		memory/shared_memory.h
		memory/shared_memory_posix.cc
		memory/singleton.cc
		memory/singleton.h
		memory/singleton_objc.h
		memory/weak_ptr.cc
		memory/weak_ptr.h

		message_loop/incoming_task_queue.cc
		message_loop/incoming_task_queue.h
		message_loop/message_loop.cc
		message_loop/message_loop.h
		message_loop/message_loop_proxy.cc
		message_loop/message_loop_proxy.h
		message_loop/message_loop_proxy_impl.cc
		message_loop/message_loop_proxy_impl.h
		message_loop/message_pump.cc
		message_loop/message_pump.h
		message_loop/message_pump_default.cc
		message_loop/message_pump_default.h
		message_loop/message_pump_dispatcher.h
		message_loop/message_pump_libevent.cc
		message_loop/message_pump_libevent.h
		message_loop/timer_slack.h

		metrics/bucket_ranges.cc
		metrics/bucket_ranges.h
		metrics/field_trial.cc
		metrics/field_trial.h
		metrics/histogram.cc
		metrics/histogram.h
		metrics/histogram_base.cc
		metrics/histogram_base.h
		metrics/histogram_delta_serialization.cc
		metrics/histogram_delta_serialization.h
		metrics/histogram_flattener.h
		metrics/histogram_samples.cc
		metrics/histogram_samples.h
		metrics/histogram_snapshot_manager.cc
		metrics/histogram_snapshot_manager.h
		metrics/sample_map.cc
		metrics/sample_map.h
		metrics/sample_vector.cc
		metrics/sample_vector.h
		metrics/sparse_histogram.cc
		metrics/sparse_histogram.h
		metrics/statistics_recorder.cc
		metrics/statistics_recorder.h
		metrics/stats_counters.cc
		metrics/stats_counters.h
		metrics/stats_table.cc
		metrics/stats_table.h
		metrics/user_metrics.cc
		metrics/user_metrics.h
		metrics/user_metrics_action.h
		numerics/safe_conversions.h
		numerics/safe_conversions_impl.h
		numerics/safe_math.h
		numerics/safe_math_impl.h

		posix/eintr_wrapper.h
		posix/file_descriptor_shuffle.cc
		posix/file_descriptor_shuffle.h
		posix/global_descriptors.cc
		posix/global_descriptors.h
		posix/unix_domain_socket_linux.cc
		posix/unix_domain_socket_linux.h
		profiler/alternate_timer.cc
		profiler/alternate_timer.h
		profiler/scoped_profile.cc
		profiler/scoped_profile.h
		profiler/tracked_time.cc
		profiler/tracked_time.h
		process/internal_linux.cc
		process/internal_linux.h
		process/kill.cc
		process/kill.h
		process/kill_posix.cc
		process/launch.cc
		process/launch.h
		process/launch_posix.cc
		process/memory.cc
		process/memory.h
		process/memory_linux.cc
		process/memory_stubs.cc
		process/process.h
		process/process_handle.h
		process/process_handle_linux.cc
		process/process_handle_posix.cc
		process/process_info.h
		process/process_info_linux.cc
		process/process_iterator.cc
		process/process_iterator.h
		process/process_iterator_linux.cc
		process/process_linux.cc
		process/process_metrics.cc
		process/process_metrics.h
		process/process_metrics_linux.cc
		process/process_metrics_posix.cc
		process/process_posix.cc

		prefs/base_prefs_export.h
		prefs/default_pref_store.cc
		prefs/default_pref_store.h
		prefs/json_pref_store.cc
		prefs/json_pref_store.h
		prefs/overlay_user_pref_store.cc
		prefs/overlay_user_pref_store.h
		prefs/persistent_pref_store.h
		prefs/pref_change_registrar.cc
		prefs/pref_change_registrar.h
		prefs/pref_filter.h
		prefs/pref_member.cc
		prefs/pref_member.h
		prefs/pref_notifier.h
		prefs/pref_notifier_impl.cc
		prefs/pref_notifier_impl.h
		prefs/pref_observer.h
		prefs/pref_registry.cc
		prefs/pref_registry.h
		prefs/pref_registry_simple.cc
		prefs/pref_registry_simple.h
		prefs/pref_service.cc
		prefs/pref_service.h
		prefs/pref_service_factory.cc
		prefs/pref_service_factory.h
		prefs/pref_store.cc
		prefs/pref_store.h
		prefs/pref_value_map.cc
		prefs/pref_value_map.h
		prefs/pref_value_store.cc
		prefs/pref_value_store.h
		prefs/scoped_user_pref_update.cc
		prefs/scoped_user_pref_update.h
		prefs/value_map_pref_store.cc
		prefs/value_map_pref_store.h
		prefs/writeable_pref_store.h
		
		strings/latin1_string_conversions.cc
		strings/latin1_string_conversions.h
		strings/nullable_string16.cc
		strings/nullable_string16.h
		strings/safe_sprintf.cc
		strings/safe_sprintf.h
		strings/string16.cc
		strings/string16.h
		strings/string_number_conversions.cc
		strings/string_number_conversions.h
		strings/string_piece.cc
		strings/string_piece.h
		strings/string_split.cc
		strings/string_split.h
		strings/string_tokenizer.h
		strings/string_util.cc
		strings/string_util.h
		strings/string_util_constants.cc
		strings/string_util_posix.h
		strings/string_util_win.h
		strings/stringize_macros.h
		strings/stringprintf.cc
		strings/stringprintf.h
		strings/sys_string_conversions.h
		strings/sys_string_conversions_posix.cc
		strings/utf_offset_string_conversions.cc
		strings/utf_offset_string_conversions.h
		strings/utf_string_conversion_utils.cc
		strings/utf_string_conversion_utils.h
		strings/utf_string_conversions.cc
		strings/utf_string_conversions.h

		synchronization/cancellation_flag.cc
		synchronization/cancellation_flag.h
		synchronization/condition_variable.h
		synchronization/condition_variable_posix.cc
		synchronization/lock.cc
		synchronization/lock.h
		synchronization/lock_impl.h
		synchronization/lock_impl_posix.cc
		synchronization/spin_wait.h
		synchronization/waitable_event.h
		synchronization/waitable_event_posix.cc
		synchronization/waitable_event_watcher.h
		synchronization/waitable_event_watcher_posix.cc
		task/cancelable_task_tracker.cc
		task/cancelable_task_tracker.h
		threading/non_thread_safe.h
		threading/non_thread_safe_impl.cc
		threading/non_thread_safe_impl.h
		threading/platform_thread.h
		threading/platform_thread_linux.cc
		threading/platform_thread_posix.cc
		threading/post_task_and_reply_impl.cc
		threading/post_task_and_reply_impl.h
		threading/sequenced_worker_pool.cc
		threading/sequenced_worker_pool.h
		threading/simple_thread.cc
		threading/simple_thread.h
		threading/thread.cc
		threading/thread.h
		threading/thread_checker.h
		threading/thread_checker_impl.cc
		threading/thread_checker_impl.h
		threading/thread_collision_warner.cc
		threading/thread_collision_warner.h
		threading/thread_id_name_manager.cc
		threading/thread_id_name_manager.h
		threading/thread_local.h
		threading/thread_local_posix.cc
		threading/thread_local_storage.cc
		threading/thread_local_storage.h
		threading/thread_local_storage_posix.cc
		threading/thread_restrictions.cc
		threading/thread_restrictions.h
		threading/watchdog.cc
		threading/watchdog.h
		threading/worker_pool.cc
		threading/worker_pool.h
		threading/worker_pool_posix.cc
		threading/worker_pool_posix.h
		time/clock.cc
		time/clock.h
		time/default_clock.cc
		time/default_clock.h
		time/default_tick_clock.cc
		time/default_tick_clock.h
		time/tick_clock.cc
		time/tick_clock.h
		time/time.cc
		time/time.h
		time/time_posix.cc
		timer/elapsed_timer.cc
		timer/elapsed_timer.h
		timer/timer.cc
		timer/timer.h
	)

SET(LIBRARY_OUTPUT_PATH ${TF_CURRENT_BINARY_PATH_LIB})

ADD_LIBRARY(base STATIC ${SRC_LIST})
