ADD_DEFINITIONS(-DTIXML_USE_STL)
ADD_DEFINITIONS(-DPATCH_BY_WUBENQI)

SET(SRC_LIST
			./xml/xml_attributes.cc
			./xml/xml_parser.cc
			./xml/xml_serializer.cc
			./xml/tinyxml_parser.cc
			./xml/xml_lite.cc
			./xml/xml_parser_module.cc
			./xml/third_party/tinyxml/tinystr.cpp
			./xml/third_party/tinyxml/tinyxmlerror.cpp
			./xml/third_party/tinyxml/tinyxml.cpp
			./xml/third_party/tinyxml/tinyxmlparser.cpp
			./daemon/base_daemon.cc			
			./arg.cc
			./arg.h
			./array.h
			./atomic_sequence_num2.h
			./base_types.h
			./byte_stream.h
			./byte_stream.cc
			./config_file.cc
			./config_file.h
			./config_file_util.cc
			./config_file_util.h
			./config_file_xml_handler.cc
			./config_file_xml_handler.h
			./dynamic_bitset.h
			./dyn_lib.cc
			./dyn_lib.h
			./dyn_lib_manager.cc
			./dyn_lib_manager.h
			./exception.cc
			./exception.h
			./factory_object.h
			./file_path_util.cc
			./file_path_util.h
			./hash_tables2.h
			./io_buffer2.cc
			./io_buffer2.h
			./iterator.h
			./linked_map.h
			./map-util.h
			./math_util.h
			./null_lock.h
			./object_core.cc
			./object_core.h
			./rand_util2.cc
			./rand_util2.h
			./scoped_lock.h
			./shared_ptr.h
			./string_util2.cc
			./string_util2.h
			./string_vector.h
			./time2.h
			./timer_manager.cc
			./timer_manager.h
			./tree.h
			./tree_util.h
			./utf8_util.h
			./zlib_compress.cc
			./zlib_compress.h			
	)

SET(LIBRARY_OUTPUT_PATH ${TF_CURRENT_BINARY_PATH_LIB})

ADD_LIBRARY(base2 STATIC ${SRC_LIST})
	  