CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT (test_netengine)

IF(CMAKE_SYSTEM MATCHES Linux)
  ADD_DEFINITIONS(-D__LINUX__)
  ADD_DEFINITIONS(-D__linux)
  ADD_DEFINITIONS(-D_REENTRANT)
ENDIF(CMAKE_SYSTEM MATCHES Linux)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
#INCLUDE_DIRECTORIES(../)

SET(EXECUTABLE_OUTPUT_PATH ${TF_CURRENT_BINARY_PATH_BIN})

LINK_DIRECTORIES(${TF_CURRENT_BINARY_PATH_LIB})

SET (TEST_NETENGINE_LIST 
		./test_netengine.cc
	)

ADD_EXECUTABLE(test_netengine ${TEST_NETENGINE_LIST}
)

##update_end
TARGET_LINK_LIBRARIES(test_netengine net base2 base libevent pthread rt)

